--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
       id-token: write
       pages: write
     env:
-      GH_TOKEN: ${{ G_KEY }}
+      GH_TOKEN: ${{ github.token }}
       ISITE_VERSION: v0.1.3
       ZOLA_VERSION: v0.19.2
       USER: ${{ github.repository_owner }}
